--- a/doc/po/License.md.ja.po
+++ b/doc/po/License.md.ja.po
@@ -6,7 +6,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Netatalk 4.3.0dev\n"
+"Project-Id-Version: Netatalk 4.3.1\n"
 "POT-Creation-Date: 2025-07-29 20:18+0200\n"
 "PO-Revision-Date: 2025-01-25 09:26+0100\n"
 "Last-Translator: Automatically generated\n"
