rename the ad binary to nad, GitHub #2337
The new name, nad, stands for Netatalk AppleDouble, emphasizing that it
is operating on Netatalk style AppleDouble metadata specifically,
and depends on Netatalk running on the same host that you run nad on.

This also reduces some ambiguity in the Netatalk codebase, since "ad"
is used internally to also refer to the AppleDouble module in libatalk,
for instance the "logtype_ad" logtype in the netatalk logger module.

--- a/doc/po/addump.1.md.ja.po
+++ b/doc/po/addump.1.md.ja.po
@@ -326,5 +326,5 @@ msgstr "関連項目"
 
 #. type: Plain text
 #: manpages/man1/addump.1.md:72
-msgid "ad(1), getfattr(1), attr(1), runat(1), getextattr(8), lsextattr(8)"
+msgid "nad(1), getfattr(1), attr(1), runat(1), getextattr(8), lsextattr(8)"
 msgstr ""
