--- a/doc/po/Upgrading.md.ja.po
+++ b/doc/po/Upgrading.md.ja.po
@@ -7,9 +7,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Netatalk 4.3.1\n"
+"Project-Id-Version: Netatalk 4.4.0\n"
 "POT-Creation-Date: 2025-05-25 10:43+0200\n"
-"PO-Revision-Date: 2025-01-23 08:10+0100\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Daniel Markstedt <daniel@mindani.net>\n"
 "Language-Team: none\n"
 "Language: ja\n"
