--- a/doc/po/_Navlinks_atalk.md.ja.po
+++ b/doc/po/_Navlinks_atalk.md.ja.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Netatalk 4.3.1\n"
+"Project-Id-Version: Netatalk 4.4.0\n"
 "POT-Creation-Date: 2025-07-29 20:18+0200\n"
-"PO-Revision-Date: 2025-04-22 22:06+0200\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Daniel Markstedt <daniel@mindani.net>\n"
 "Language-Team: none\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
