--- a/doc/po/fce_listen.1.md.ja.po
+++ b/doc/po/fce_listen.1.md.ja.po
@@ -5,9 +5,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Netatalk 4.3.1\n"
+"Project-Id-Version: Netatalk 4.4.0\n"
 "POT-Creation-Date: 2025-08-29 13:22+0200\n"
-"PO-Revision-Date: 2025-08-05 13:58+0200\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Daniel Markstedt <daniel@mindani.net>\n"
 "Language-Team: none\n"
 "Language: ja\n"
